--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -114,6 +114,13 @@
       text-align: center;
     }
 
+    .back-btn {
+      margin-top: 40px;
+      color: #ccc;
+      font-size: 14px;
+      text-decoration: underline;
+      cursor: pointer;
+    }
     button {
       background-color: var(--main);
       color: white;
@@ -166,6 +173,8 @@
       </ul>
     </div>
   </div>
+
+  <div class="back-btn" onclick="window.location.href='/'">بازگشت به صفحه اصلی</div>
 
   <!-- اگر اسکریپت خارجی داری، این را نگه‌دار؛ در غیر این صورت می‌توانی حذفش کنی -->
 </body>
