--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 42px;
-      height: 42px;
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
       background: linear-gradient(135deg, var(--main), var(--main-dark));
       color: #fff;
@@ -144,6 +144,12 @@
     .socials a:hover {
       transform: translateY(-4px);
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+    
+    .socials svg {
+      width: 20px;
+      height: 20px;
+      fill: currentColor;
     }
     
     .socials svg {
@@ -180,7 +186,6 @@
     <svg viewBox="0 0 24 24">
       <path d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm10 2c1.65 0 3 1.35 3 3v10c0 1.65-1.35 3-3 3H7c-1.65 0-3-1.35-3-3V7c0-1.65 1.35-3 3-3h10zm-5 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zm0 2a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm4.75-2.88a1.12 1.12 0 100 2.25 1.12 1.12 0 000-2.25z"/>
     </svg>
-    Instagram
   </a>
 
   <!-- LinkedIn -->
@@ -188,7 +193,6 @@
     <svg viewBox="0 0 24 24">
       <path d="M20.45 20.45h-3.56v-5.34c0-1.27-.02-2.9-1.77-2.9-1.77 0-2.05 1.38-2.05 2.8v5.44H9.5V9h3.42v1.56h.05c.48-.9 1.65-1.85 3.4-1.85 3.63 0 4.3 2.39 4.3 5.5v6.24zM5.34 7.43a2.06 2.06 0 1 1 .01-4.13 2.06 2.06 0 0 1-.01 4.13zM6.82 20.45H3.86V9h2.96v11.45z"/>
     </svg>
-    LinkedIn
   </a>
 
   <!-- YouTube -->
@@ -196,7 +200,6 @@
     <svg viewBox="0 0 24 24">
       <path d="M23.498 6.186a2.985 2.985 0 00-2.1-2.11C19.74 3.5 12 3.5 12 3.5s-7.74 0-9.398.576a2.985 2.985 0 00-2.1 2.11C0 7.845 0 12 0 12s0 4.155.502 5.814a2.985 2.985 0 002.1 2.11C4.26 20.5 12 20.5 12 20.5s7.74 0 9.398-.576a2.985 2.985 0 002.1-2.11C24 16.155 24 12 24 12s0-4.155-.502-5.814zM9.75 15.5v-7l6 3.5-6 3.5z"/>
     </svg>
-    YouTube
   </a>
 
   <!-- Spotify -->
@@ -204,15 +207,13 @@
     <svg viewBox="0 0 24 24">
       <path d="M12 0a12 12 0 1012 12A12.013 12.013 0 0012 0zm5.46 17.27a.75.75 0 01-1.04.25c-2.84-1.74-6.42-2.13-10.63-1.17a.75.75 0 01-.34-1.46c4.59-1.08 8.57-.64 11.79 1.29a.75.75 0 01.22 1.09zm1.48-3.3a.93.93 0 01-1.3.32c-3.25-2-8.2-2.58-12.02-1.42a.94.94 0 11-.52-1.81c4.33-1.25 9.76-.61 13.44 1.71a.93.93 0 01.4 1.2zm.14-3.42C15.72 8.14 8.53 8.1 5.7 9a1.12 1.12 0 11-.65-2.15c3.44-1.04 11.57-1.01 15.62 1.56a1.13 1.13 0 01-1.19 1.98z"/>
     </svg>
-    Spotify
   </a>
 
   <!-- Phone -->
-  <a href="tel:+989123456789">
+  <a href="tel:+989913752985">
     <svg viewBox="0 0 24 24">
       <path d="M6.62 10.79a15.1 15.1 0 006.59 6.59l2.2-2.2a1 1 0 011.01-.24c1.12.37 2.33.57 3.58.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5a1 1 0 011-1h3.5a1 1 0 011 1c0 1.25.2 2.46.57 3.58a1 1 0 01-.24 1.01l-2.2 2.2z"/>
     </svg>
-    +98 991 375 2985
   </a>
 </div>
 
