--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -67,7 +67,8 @@
       left: 0;
       width: 100%;
       height: 60px;
-      background-color: #1e1e1e;
+      background-color: rgba(30,30,30,0.85); /* نیمه شفاف مشابه لایه پس زمینه */
+      backdrop-filter: blur(8px);
       display: flex;
       align-items: center;
       gap: 12px;
@@ -101,9 +102,10 @@
       width: calc(100% - 32px);
       margin-top: 80px; /* جای کافی برای top bar */
       padding: 2rem;
-      background-color: var(--card);
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      background-color: rgba(30,30,30,0.85); /* نیمه شفاف مشابه لایه پس زمینه */
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+      backdrop-filter: blur(8px);
     }
 
     h1 {
