--- a/music/index.html
+++ b/music/index.html
@@ -50,7 +50,17 @@
       opacity: 0.6; /* میزان تیرگی/شفافیت رنگ روی تصویر */
       z-index: -1;
     }
-
+    /* کارت مرکزی */
+    .container {
+      max-width: 480px;
+      margin: 100px auto 40px; /* فاصله از هدر و پایین صفحه */
+      padding: 30px 20px;
+      background-color: rgba(30,30,30,0.85); /* نیمه شفاف مشابه لایه پس زمینه */
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+      backdrop-filter: blur(8px);
+      text-align: center;
+    }
     /* Top Bar */
     header.top-bar {
       position: fixed;
@@ -58,7 +68,8 @@
       left: 0;
       width: 100%;
       height: 60px;
-      background-color: #1e1e1e;
+      background-color: rgba(30,30,30,0.85); /* نیمه شفاف مشابه لایه پس زمینه */
+      backdrop-filter: blur(8px);
       display: flex;
       align-items: center;
       gap: 12px;
@@ -170,7 +181,7 @@
       </svg>
     </a>
   </header>
-
+  <div class="container">
   <h1>My Musical Universe</h1>
 
   <div class="cover">
@@ -204,9 +215,6 @@
     </a>
 
   </div>
-
-  <div class="back-btn" onclick="window.location.href='/'">بازگشت به صفحه اصلی</div>
-
   <!-- آیکن‌های SVG -->
   <svg style="display:none;">
     <symbol id="spotify-icon" viewBox="0 0 24 24">
