--- a/music/index.html
+++ b/music/index.html
@@ -25,7 +25,7 @@
       padding: 40px 20px;
       text-align: center;
       position: relative;
-      min-height: 100dvh;
+      overflow-y: auto; /* اجازه scroll عمودی */
     }
 
     /* تصویر پس‌زمینه با بلور */
@@ -52,7 +52,7 @@
     /* کارت مرکزی */
     .container {
       max-width: 480px;
-      margin: 100px auto 40px; /* فاصله از هدر و پایین صفحه */
+      margin: 40px auto 40px; /* فاصله از هدر و پایین صفحه */
       padding: 30px 20px;
       background-color: rgba(30,30,30,0.85); /* نیمه شفاف مشابه لایه پس زمینه */
       border-radius: 16px;
