--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -302,7 +302,7 @@
 
         <!-- Card 3 -->
         <div class="card">
-          <img src="lamplighter.jpg" alt="Personal Project – Lamplighter">
+          <img src="personal.jpg" alt="Personal Project – Lamplighter">
           <div class="card-content">
             <h4>Personal Project — Lamplighter</h4>
             <ul>
