--- a/music/index.html
+++ b/music/index.html
@@ -205,13 +205,13 @@
       <svg><use href="#soundcloud-icon"/></svg> SoundCloud
     </a>
 
-    <a class="link-item" href="https://www.amazon.com/music/player/artists/B0CQK8SVMV/%C3%B8nyro" target="_blank" rel="noopener">
-      <svg><use href="#amazon-icon"/></svg> Amazon Music
-    </a>
+    <!--<a class="link-item" href="https://www.amazon.com/music/player/artists/B0CQK8SVMV/%C3%B8nyro" target="_blank" rel="noopener">-->
+      <!--<svg><use href="#amazon-icon"/></svg> Amazon Music-->
+    <!--</a>-->
 
-    <a class="link-item" href="https://www.deezer.com/us/artist/247330532" target="_blank" rel="noopener">
-      <svg><use href="#deezer-icon"/></svg> Deezer
-    </a>
+    <!--<a class="link-item" href="https://www.deezer.com/us/artist/247330532" target="_blank" rel="noopener">-->
+      <!--<svg><use href="#deezer-icon"/></svg> Deezer-->
+    <!--</a>-->
 
   </div>
   <!-- آیکن‌های SVG -->
